--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -26,6 +26,9 @@
     <string name="gallery_option">Scegli un\'immagine dalla galleria</string>
     <string name="reset_option">Ripristina l\'immagine di default</string>
 
+    <string name="invalid_username">Il campo username non può essere vuoto</string>
+    <string name="invalid_email">Formato e-mail non valido</string>
+    <string name="invalid_location">Il campo città non può essere vuoto</string>
     <string name="discard_changes">Abbandonare le modifiche?</string>
     <string name="incorrect_values">Alcuni campi sono vuoti.\nPer favore, riempili</string>
     <string name="incorrect_email">L\'indirizzo e-mail non è valido.\nPer favore, modificalo</string>
