--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -28,12 +28,11 @@
 
     <string name="invalid_username">Il campo username non può essere vuoto</string>
     <string name="invalid_email">Formato e-mail non valido</string>
-    <string name="invalid_location">Il campo città non può essere vuoto</string>
+    <string name="invalid_location_wrong">Il campo città può contenere solo caratteri alfabetici</string>
+    <string name="invalid_location_empty">Il campo città non può essere vuoto</string>
     <string name="discard_changes">Abbandonare le modifiche?</string>
-    <string name="incorrect_values">Alcuni campi sono vuoti.\nPer favore, riempili</string>
-    <string name="incorrect_email">L\'indirizzo e-mail non è valido.\nPer favore, modificalo</string>
+    <string name="incorrect_values">Alcuni campi contengono dati errati.\nPer favore, controllali</string>
     <string name="failed_obtain_picture">Si è verificato un errore durante l\'ottenimento dell\'immagine</string>
 
     <string name="number_zero">0</string>
-    <string name="alpha_space_characters">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
 </resources>
